# objectdetector

./: .gitignore  gradle.properties  settings.gradle
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolo11.cpp  yolo11.h  yolo11_cls.cpp  yolo11_det.cpp  yolo11_obb.cpp  yolo11_pose.cpp  yolo11_seg.cpp  yolo11ncnn.cpp
app/src/main/jni/ncnn-20260113-android-vulkan/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20260113-android-vulkan/arm64-v8a/lib/cmake/ncnn/: ncnnConfigVersion.cmake
app/src/main/jni/ncnn-20260113-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20260113-android-vulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake  ncnnConfigVersion.cmake
app/src/main/jni/ncnn-20260113-android-vulkan/riscv64/include/ncnn/: platform.h
app/src/main/jni/ncnn-20260113-android-vulkan/riscv64/lib/cmake/glslang/: glslang-targets.cmake
app/src/main/jni/ncnn-20260113-android-vulkan/x86/include/glslang/SPIRV/: spirv.hpp11
app/src/main/jni/ncnn-20260113-android-vulkan/x86/lib/cmake/glslang/: glslang-config-version.cmake  glslang-config.cmake  glslang-targets-release.cmake
app/src/main/jni/ncnn-20260113-android-vulkan/x86/lib/cmake/ncnn/: ncnnConfig.cmake
app/src/main/jni/ncnn-20260113-android-vulkan/x86/lib/pkgconfig/: ncnn.pc
app/src/main/jni/ncnn-20260113-android-vulkan/x86_64/include/ncnn/: layer_shader_type_enum.h  platform.h
app/src/main/jni/opencv-mobile-4.13.0-android/sdk/native/jni/: OpenCVConfig.cmake
app/src/main/jni/opencv-mobile-4.13.0-android/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake  (+1 more)
(+27 files in other folders)
